--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=cdeguelle-ynov-frontend
 sonar.exclusions=**/*.spec.ts,**/*.conf.js,**/*.config.js
 sonar.sources=src
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/index.html
